# lox-rs

./: Cargo.toml
.github/workflows/: rust.yml
proptest-regressions/scanner/: string.txt
src/: error.rs  lib.rs  main.rs  reporting.rs  token.rs
src/expr/: binary_operator.rs  error.rs  formatter.rs  literal.rs  mod.rs  unary_operator.rs
src/expr/operators/: binary_operator.rs  error.rs  mod.rs  unary_operator.rs
src/expr/terminal/: binary_operator.rs  comma_operator.rs  comparision_operator.rs  factor_operator.rs  literal.rs  mod.rs  term_operator.rs  ternary_else_operator.rs  ternary_then_operator.rs  unary_operator.rs
src/parser/: comma.rs  comparison.rs  error.rs  expression.rs  factor.rs  macros.rs  mod.rs  primary.rs  term.rs  ternary.rs  unary.rs
src/scanner/: block_comment.rs  error.rs  identifier.rs  line_comment.rs  mod.rs  number.rs  string.rs
