[package]
name = "rox"
version = "0.1.0"
edition = "2024"
description = "A Rust-based implementation of the Lox programming language"
authors = ["Anass IRIZI - anass.irizi.00@gmail.com"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
rstest = "0.25.0"
claims = "0.8.0"
proptest = "1.6.0"
